[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://cursors/png/arrow.png" type="Texture" id=2]
[ext_resource path="res://cursors/png/help.png" type="Texture" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.988235, 0.815686, 0.596078, 1 )

[sub_resource type="CapsuleMesh" id=2]
material = SubResource( 1 )
radius = 0.3
mid_height = 0.9
radial_segments = 16
rings = 4

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.4
bottom_radius = 0.3
height = 0.5

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.623529, 0.262745, 0.262745, 1 )

[sub_resource type="PrismMesh" id=4]
material = SubResource( 5 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.3
height = 0.9

[sub_resource type="SphereMesh" id=8]
radius = 0.05
height = 0.1

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.5, 0.5, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Head" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -2.17412e-08, 0.497381 )
mesh = SubResource( 6 )

[node name="Cap" type="MeshInstance" parent="Body/Head"]
transform = Transform( 0.4, 0, 0, 0, -1.74846e-08, 0.03, 0, -0.4, -1.31134e-09, 0, 0.200041, -0.407141 )
mesh = SubResource( 4 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76978, 2.55337 )
current = true

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -500 )
debug_shape_custom_color = Color( 0, 0, 0, 0 )

[node name="CollisionPoint" type="MeshInstance" parent="Camera/RayCast"]
mesh = SubResource( 8 )

[node name="Head2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
mesh = SubResource( 7 )
skeleton = NodePath("../GimballHorizontal/GimballVertical")

[node name="RayCast" type="RayCast" parent="Head2"]
enabled = true
cast_to = Vector3( 0, 0, -500 )

[node name="CollisionPoint" type="MeshInstance" parent="Head2/RayCast"]
visible = false
mesh = SubResource( 8 )

[node name="GimballHorizontal" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )
visible = false

[node name="GimballVertical" type="Spatial" parent="GimballHorizontal"]
visible = false

[node name="ControlCursors" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Cursor" type="Sprite" parent="ControlCursors"]
position = Vector2( 512, 300 )
z_index = 1
texture = ExtResource( 2 )

[node name="FollowCursor" type="Sprite" parent="ControlCursors"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="HeadTarget" type="Spatial" parent="."]
